# ahoy

./: .gitattributes  .gitignore  CNAME  Communication.h  Getting_Started.md  README.md  User_Manual.md  ahoy.code-workspace  config.toml  index.html  index.xml  miPayload.h  sitemap.xml
.github/: FUNDING.yml
about/: index.html
archetypes/: default.md
categories/: index.html  index.xml
content/: getting_started.html  imprint.html  screenshots.html  web_install.html
css/: style.css
doc/: AhoyMiles.fzz  AhoyWemosD1.fzz  Arduino_nRF24L01+.fzz  ESP DTU Platinenlayout  ESP-DTU_Platinenlayout.md  ESP8266_nRF24L01+.fzz  HM-400 data.xlsx  Hoymiles-SerialNumbers.xlsx  RasPi_nRF24L01+.fzz  getting-started-ESP8266.md  hoymiles-format-description.html  hoymiles-format-description.md  hoymiles-format-description.txt  prometheus_ep_description.md
faq/: index.html  index.xml
firmware/: manifest.json
flash/: index.html
getting_started/: index.html
imprint/: index.html
layouts/: index.html
manual/: Getting_Started.md  User_Manual.md  ahoy_config.md  factory_firmware.md
patches/: AsyncWeb_Prometheus.patch  GxEPD2_HAL.patch  GxEPD2_SW_SPI.patch  RF24.patch  RF24_Hal.patch  espMqttClientSemaphore.patch
screenshots/: index.html
scripts/: add_littlefs_binary.py  applyPatches.py  auto_firmware_version.py  buildManifest.py  convertHtml.py  getVersion.py  gh-action-dev-build-flash.html  htmlPreprocessorDefines.py  reduceGxEPD2.py
src/: .gitignore  CHANGES.md  app.h  (+6 more)
tools/rpi/discover/: CMakeLists.txt  README.md  common.cpp  common.hpp  discover.cpp  pretender.cpp
(+405 files in other folders)
